--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <!-- Countdown Page -->
         <div class="card" id="countdown-page" hidden>
-            <h1 class="countdown">3</h1>
+            <h1 class="countdown"></h1>
         </div>
 
         <!-- Game Page -->
@@ -97,6 +97,7 @@
     </div>
 
     <!-- script -->
+    <script src="shuffle.js"></script>
     <script src="script.js"></script>
     
 </body>
