--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <!-- Right/Wrong Buttons -->
             <div class="item-footer">
                 <button class="wrong" onclick="select(false)">Wrong</button>
-                <button class="right"onclick="select(true)>Right</button>
+                <button class="right" onclick="select(true)">Right</button>
             </div>
         </div>
 
